--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   connectivity_plus: ^6.1.5
   pretty_dio_logger: ^1.3.1
   google_maps_flutter: ^2.14.0
+  pin_code_fields: ^8.0.1
+  intl: ^0.20.2
+  firebase_core:
+  firebase_auth: ^5.3.0
   shimmer_animation: ^2.2.2
   cached_network_image: ^3.4.1
   logger: ^2.6.1
