--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   connectivity_plus: ^6.1.5
   pretty_dio_logger: ^1.3.1
   google_maps_flutter: ^2.14.0
+  camera:
   geolocator: ^12.0.0
   geocoding: ^3.0.0
   pin_code_fields: ^8.0.1
